# SVEKER

./: .buildinfo  .gitignore  LICENSE.txt  README.rst  analysis_script.py  api.html  environment.yml  genindex.html  index.html  objects.inv  parameters.yaml  pyproject.toml  search.html  searchindex.js  training_script.py  usage.html
.github/workflows/: documenation.yml
STAR_protocol_data/: CHEMBL220.csv  CHEMBL279.csv  CHEMBL325.csv
STAR_protocol_utils/: dataloader.py  mappings.py
_sources/: api.rst.txt
docs/source/: conf.py  index.rst  usage.rst
docs/source/_templates/: class.rst
src/SVEKER/: __init__.py  main.py
src/SVEKER.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/SVEKER/kernels/: __init__.py  kernels.py
src/SVEKER/utils/: __init__.py  utils.py
tests/: test_classes_large.py  test_classes_small.py  test_utils_kernel.py
